--- a/2주차/mission_week2.ipynb
+++ b/2주차/mission_week2.ipynb
@@ -428,6 +428,7 @@
       "cell_type": "code",
       "source": [
         "#Q4\n",
+        "!pip install folium\n",
         "import folium"
       ],
       "metadata": {
